--- a/sandbox/notebook_select_best.ipynb
+++ b/sandbox/notebook_select_best.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,32 +60,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "signal_generator = SignalGenerator(0, 100).with_peaks(3).with_peaks(3, direction=-1).sin(0.2, 0.2)\n",
-    "measurements = [Measurement(measurement, index * 100) for index, measurement in enumerate(signal_generator.data)]"
+    "def to_measurements(signal_generator: SignalGenerator) -> List[Measurement]:\n",
+    "  return [Measurement(measurement, index * 100) for index, measurement in enumerate(signal_generator.data)]\n",
+    "\n",
+    "def strip_data(data: List[Measurement]) -> List[float]:\n",
+    "  return [item.value for item in data]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<src.data_compressor.pip.compress_pip_pd.CompressPIP_PD at 0x111261d60>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "AlgorythmSelector().get_best(measurements)"
+    "dataset = []\n",
+    "signal_generators = [\n",
+    "  SignalGenerator(0, 100).with_peaks(3).with_peaks(3, direction=-1).sin(0.2, 0.2),\n",
+    "  SignalGenerator(0, 100).with_peaks(3).with_peaks(3, direction=-1).noise(),\n",
+    "  SignalGenerator(0, 100).with_peaks(3).noise(),\n",
+    "  SignalGenerator(0, 100).with_peaks(3),\n",
+    "]\n",
+    "for signal_generator in signal_generators:\n",
+    "  measurements = to_measurements(signal_generator)\n",
+    "  best_method_name = AlgorythmSelector().get_best(measurements).__class__.__name__\n",
+    "  dataset.append([strip_data(measurements), best_method_name])"
    ]
   }
  ],
