--- a/sandbox/notebook_select_best.ipynb
+++ b/sandbox/notebook_select_best.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,12 +83,60 @@
     "  SignalGenerator(0, 100).with_peaks(3).with_peaks(3, direction=-1).noise(),\n",
     "  SignalGenerator(0, 100).with_peaks(3).noise(),\n",
     "  SignalGenerator(0, 100).with_peaks(3),\n",
+    "  SignalGenerator(0, 100).square_vawe(),\n",
+    "  SignalGenerator(0, 100).square_vawe().with_peaks(5),\n",
+    "  SignalGenerator(0, 100).square_vawe().with_peaks(5).sin(),\n",
+    "  SignalGenerator(0, 100).square_vawe().with_peaks(5).sin().noise(),\n",
     "]\n",
+    "\n",
     "for signal_generator in signal_generators:\n",
     "  measurements = to_measurements(signal_generator)\n",
-    "  best_method_name = AlgorythmSelector().get_best(measurements).__class__.__name__\n",
-    "  dataset.append([strip_data(measurements), best_method_name])"
+    "  best_method_name = AlgorythmSelector().get_best(measurements)[0].__class__.__name__\n",
+    "  dataset.append([strip_data(measurements), best_method_name]) # tu powinny być metryki na wejściu"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import tree\n",
+    "from fogml.generators import GeneratorFactory\n",
+    "\n",
+    "dataset_size = len(dataset)\n",
+    "\n",
+    "X_train = [data for data, label in dataset]\n",
+    "y_train = [label for data, label in dataset]\n",
+    "\n",
+    "X_test = [data for data, label in dataset[:2]]\n",
+    "y_test = [label for data, label in dataset[:2]]\n",
+    "\n",
+    "clf = tree.DecisionTreeClassifier()\n",
+    "clf = clf.fit(X_train, y_train)\n",
+    "\n",
+    "score = clf.score(X_test, y_test)\n",
+    "print(f'Score: {score}')\n",
+    "\n",
+    "factory = GeneratorFactory()\n",
+    "generator = factory.get_generator(clf)\n",
+    "generator.generate(fname='output.c')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
