Input for model

--- a/sandbox/notebook_select_best.ipynb
+++ b/sandbox/notebook_select_best.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,17 +87,21 @@
     "  SignalGenerator(0, 100).square_vawe().with_peaks(5),\n",
     "  SignalGenerator(0, 100).square_vawe().with_peaks(5).sin(),\n",
     "  SignalGenerator(0, 100).square_vawe().with_peaks(5).sin().noise(),\n",
+    "  SignalGenerator(0, 100).square_vawe().with_peaks(5).sin(100).noise(),\n",
+    "  SignalGenerator(0, 100).square_vawe().with_peaks(50).noise(),\n",
     "]\n",
     "\n",
     "for signal_generator in signal_generators:\n",
     "  measurements = to_measurements(signal_generator)\n",
     "  best_method_name = AlgorythmSelector().get_best(measurements)[0].__class__.__name__\n",
-    "  dataset.append([strip_data(measurements), best_method_name]) # tu powinny być metryki na wejściu"
+    "  algorythm_selector = AlgorythmSelector()\n",
+    "  input = algorythm_selector.metrics_to_input(algorythm_selector.compute_line_metrics_for_data(measurements))\n",
+    "  dataset.append([input, best_method_name])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
