--- a/sandbox/ml_test.ipynb
+++ b/sandbox/ml_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -34,34 +34,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'original_size': 1000, 'compressed_size': 882, 'compression_rate': 0.118, 'method_name': 'CompressSTC'}\n"
+      "{'original_size': 100, 'compressed_size': 2, 'compression_rate': 0.98, 'method_name': 'CompressAPCADFT'}\n"
      ]
     }
    ],
    "source": [
     "measurement_provider = MeasurementProvider()\n",
-    "dataset = measurement_provider.json_to_measurements('car_engine.json')[:1000]\n",
+    "dataset = measurement_provider.json_to_measurements('airlines.json')[:100]\n",
     "compressed_data, stats = method_selector.compress_with_best(dataset)\n",
     "print(stats)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20011 17653 2358\n"
+      "2241 92 2149\n"
      ]
     }
    ],
@@ -73,14 +73,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "52201 46051 6150\n"
+      "4460 168 4292\n"
      ]
     }
    ],
