--- a/sandbox/ml_test.ipynb
+++ b/sandbox/ml_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'original_size': 100, 'compressed_size': 2, 'compression_rate': 0.98, 'method_name': 'CompressAPCADFT'}\n"
+      "{'original_size': 100, 'compressed_size': 10, 'compression_rate': 0.9, 'method_name': 'CompressMinMax_0.1'}\n"
      ]
     }
    ],
@@ -54,14 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2241 92 2149\n"
+      "2241 260 1981\n"
      ]
     }
    ],
@@ -73,14 +73,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4460 168 4292\n"
+      "4460 511 3949\n"
      ]
     }
    ],
