--- a/sandbox/ml_test.ipynb
+++ b/sandbox/ml_test.ipynb
@@ -41,7 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'original_size': 100, 'compressed_size': 10, 'compression_rate': 0.9, 'method_name': 'CompressMinMax_0.1'}\n"
+      "{'original_size': 100, 'compressed_size': 17, 'compression_rate': 0.83, 'method_name': 'CompressAPCAFFT_0.1'}\n"
      ]
     }
    ],
@@ -61,7 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2241 260 1981\n"
+      "2241 482 1759\n"
      ]
     }
    ],
@@ -80,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4460 511 3949\n"
+      "4460 1014 3446\n"
      ]
     }
    ],
