--- a/sandbox/ml_test.ipynb
+++ b/sandbox/ml_test.ipynb
@@ -66,8 +66,8 @@
     }
    ],
    "source": [
-    "senML_cbor_size_original = getsizeof(SenMLCBORSerializer().serialize(dataset, '/72/', '1/2'))\n",
-    "senML_cbor_size_compressed = getsizeof(SenMLCBORSerializer().serialize(compressed_data, '/72/', '1/2'))\n",
+    "senML_cbor_size_original = getsizeof(SenMLCBORSerializer.serialize(dataset, '/72/', '1/2'))\n",
+    "senML_cbor_size_compressed = getsizeof(SenMLCBORSerializer.serialize(compressed_data, '/72/', '1/2'))\n",
     "print(senML_cbor_size_original, senML_cbor_size_compressed, senML_cbor_size_original - senML_cbor_size_compressed)"
    ]
   },
@@ -85,8 +85,8 @@
     }
    ],
    "source": [
-    "senML_json_size_original = getsizeof(SenMLJSONSerializer().serialize(dataset, '/72/', '1/2'))\n",
-    "senML_json_size_compressed = getsizeof(SenMLJSONSerializer().serialize(compressed_data, '/72/', '1/2'))\n",
+    "senML_json_size_original = getsizeof(SenMLJSONSerializer.serialize(dataset, '/72/', '1/2'))\n",
+    "senML_json_size_compressed = getsizeof(SenMLJSONSerializer.serialize(compressed_data, '/72/', '1/2'))\n",
     "print(senML_json_size_original, senML_json_size_compressed, senML_json_size_original - senML_json_size_compressed)"
    ]
   }
